# alkimia

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  alkimia.doxygen.in  run-clang-format.sh
autotests/: CMakeLists.txt  alklocaletest.cpp  alknewstuffenginetest.cpp  alkonlinequoteprivatetest.cpp  alkonlinequotetest.cpp  alkpayeereferencelinktest.cpp  alkpayeereferencelinktest.h  alkwebpagetest.cpp  test.h
data/: CMakeLists.txt
data/quotes/: Börse-Online---Aktien.txt  CMakeLists.txt  Financial-Times.txt  KMyMoney-Currency.txt  MSN.txt  Puls-Biznesu.txt  Stooq-Currency.txt
doc/: CMakeLists.txt  entities.ent.cmake
src/: CMakeLists.txt  LibAlkimiaConfig.cmake.in  alkaboutdata.cpp  alkaboutdata.h  alkapplication.cpp  alkapplication.h  alkcombobox.h  alkdateformat.cpp  alkdateformat.h  alkdownloadengine.cpp  alkdownloadengine.h  alkexception.h  alkhelpmenu.cpp  alkhelpmenu.h  alkimia-links.knsrc  alkimia-payee-links.knsrc  alkimiatest-quotes.knsrc  alklocale.cpp  alklocale.h  alknewstuffengine.cpp  alknewstuffengine.h  alknewstuffentry.cpp  alknewstuffentry.h  alknewstuffentry_p.h  alknewstuffwidget.cpp  alknewstuffwidget.h  alkonlinequote.cpp  alkonlinequote.h  alkonlinequote_p.cpp  alkonlinequote_p.h  alkonlinequotedetails.ui  alkonlinequoteprocess.h  alkonlinequotesmodel.cpp  alkonlinequotesource.cpp  alkonlinequotesource.h  alkonlinequotesource_p.h  alkonlinequotesprofile.cpp  alkonlinequotesprofile.h  alkonlinequotesprofile_p.cpp  alkonlinequotesprofile_p.h  (+32 more)
tests/: CMakeLists.txt  alknewstuffwidgettest.cpp  alkpayeelinkswidgettest.cpp  qmlalkonlinequotetest-qt4.qml  (+2 more)
tools/onlinequotesimporter/: CMakeLists.txt  main.cpp
(+31 files in other folders)
