install(FILES Wallstreet-Online-DE-Default.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Globe-&-Mail.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Puls-Biznesu.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Finanztreff.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Wallstreet-Online-DE-Hamburg.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Börse-Online---Aktien.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Nasdaq-Baltic---Funds.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Stooq.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Stooq-Currency.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Financial-Times.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES Nasdaq-Baltic---Shares.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES KMyMoney-Currency.txt DESTINATION ${QUOTES_INSTALL_DIR})
install(FILES MSN.txt DESTINATION ${QUOTES_INSTALL_DIR})
